add work with restapi
